--- a/Homework/Homework.csproj
+++ b/Homework/Homework.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
+        <PackageReference Include="NLog.Web.AspNetCore" Version="5.4.0" />
+        <PackageReference Include="NSwag.AspNetCore" Version="14.4.0" />
     </ItemGroup>
 
 </Project>
