Add HttpClient, small cleanup

--- a/Homework/appsettings.json
+++ b/Homework/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DummyApi": {
+    "BaseUrl": "https://dummyjson.com/"
+  }
 }
