--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <AssemblyName>Server</AssemblyName>
+        <RootNamespace>Server</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
