--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "DummyApi": {
     "BaseUrl": "https://dummyjson.com/"
-  }
+  },
+  "ClientUrl": "https://localhost:5002"
 }
