Tweak appsettings-files, add documentation on README.md

--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "DummyApi": {
+    "BaseUrl": "https://dummyjson.com/"
+  },
+  "ClientUrl": "https://localhost:5002"
 }
